Fix small style bugs in dark mode

--- a/src/styles/_addButton.scss
+++ b/src/styles/_addButton.scss
@@ -27,6 +27,11 @@
   font-size: 28px;
   background-color: $background;
   cursor: pointer;
+
+  &--dark {
+    background-color: $grayBackground-dark;
+    color: $background;
+  }
 }
 
 .button-filters {
